--- a/session8/index.html
+++ b/session8/index.html
@@ -12,22 +12,22 @@
 <body>
     <!-- <div id="caculator">
         <button id="up">+</button>
-        <p id="view"></p>
+        <p id="view">0</p>
         <button id="down">-</button>
-    </div>   -->
+    </div> -->
 
 
-    <!-- <div id="time">
+    <div id="time">
         <input type="number" id="time" placeholder="Set your time">
         <button id="start">Start</button>
         <button id="stop">Stop</button>
         <p id="display"></p>
-  </div> -->
+    </div>
 
 
 
-    <!-- 
-    <div class="random">
+
+    <!-- <div class="random">
         <button id='reload'>Reload</button>
         <div class="viewString">
             <p id="quoteText">23</p>
@@ -37,7 +37,7 @@
 
 
 
-
+    <!-- 
     <div id="cau4">
         <div class="menu">
             <input id="inputProject" placeholder="Enter project">
@@ -64,7 +64,7 @@
             </tbody>
 
         </table>
-    </div>
+    </div> -->
     <script src='index.js'></script>
 </body>
 
