--- a/baitestcuoi/index1.html
+++ b/baitestcuoi/index1.html
@@ -12,7 +12,7 @@
 <body>
     <h1> Bài 1 : Bài Test</h1>
 
-    <button onclick="findOppositeNumber()">Số đối diện là </button>
+    <button onclick="findOppositeNumber()" value="Number">Số đối diện là </button>
     <!-- <button onclick="newArr()"> chuỗi mới </button>  bài 1 .b -->
 
 
