--- a/Session1/index.html
+++ b/Session1/index.html
@@ -60,9 +60,9 @@
         // alert(' diện tích hình vuông là ' + '\n' + sv * sv);
 
 
-        // console.log('bài 9 : Diện tích hình tròn là ');
-        // var st = prompt('Nhập bán kính hình tròn ');
-        // alert('diện tích hình tròn là ' + st * st * 3, 14);
+        console.log('bài 9 : Diện tích hình tròn là ');
+        var st = prompt('Nhập bán kính hình tròn ');
+        alert('diện tích hình tròn là ' + st * st * 3, 14);
 
 
         // console.log('Bài 10 : Chuyển đổi độ C qua độ F : ');
