--- a/session8/index.html
+++ b/session8/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     </div> -->
 
 
-    <div id="time">
+    <div id="timer">
         <input type="number" id="time" placeholder="Set your time">
         <button id="start">Start</button>
         <button id="stop">Stop</button>
